Added new node for structured output
the ouput should be in a format that can be directly converted into a table

--- a/Plan LLM.ipynb
+++ b/Plan LLM.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "33231c9f-e7a1-44c9-94e5-2658120b07a7",
    "metadata": {},
    "outputs": [],
@@ -24,24 +24,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "f7b96795-b25b-45c7-b7a4-7e1084d72dbf",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "================================\u001b[1m System Message \u001b[0m================================\n",
-      "\n",
-      "You are a helpful assistant.\n",
-      "\n",
-      "=============================\u001b[1m Messages Placeholder \u001b[0m=============================\n",
-      "\n",
-      "\u001b[33;1m\u001b[1;3m{{messages}}\u001b[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#tools\n",
     "#wrapper = DuckDuckGoSearchAPIWrapper(max_results=20)\n",
@@ -66,7 +52,7 @@
     "prompt.pretty_print()\n",
     "\n",
     "# Creating an Agent Executor with tools\n",
-    "groq_api_key = \"INSERT_API_KEY_HERE\"\n",
+    "groq_api_key = \"ADD_API_KEY_HERE\"\n",
     "llm = ChatGroq(temperature=0, groq_api_key=groq_api_key, model_name=\"llama3-70b-8192\")\n",
     "#llm = ChatOllama(model = \"llama3\", temperature=0)\n",
     "agent_executor = create_react_agent(llm, tools, messages_modifier=prompt)"
@@ -74,31 +60,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "ffa5df8f-5274-4181-9294-d1ffcb9cade7",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'messages': [HumanMessage(content='Give me a list of G20 Countries', id='3e9a53b3-96a6-42bd-8372-35c8679c7bb0'),\n",
-       "  AIMessage(content='', additional_kwargs={'tool_calls': [{'id': 'call_6bv2', 'function': {'arguments': '{\"query\":\"list of G20 countries\"}', 'name': 'search_duckduckgo'}, 'type': 'function'}]}, response_metadata={'token_usage': {'completion_tokens': 49, 'prompt_tokens': 966, 'total_tokens': 1015, 'completion_time': 0.146656535, 'prompt_time': 0.52503276, 'queue_time': None, 'total_time': 0.671689295}, 'model_name': 'llama3-70b-8192', 'system_fingerprint': 'fp_c1a4bcec29', 'finish_reason': 'tool_calls', 'logprobs': None}, id='run-965dd3d5-4103-47fe-ba9e-7d0c5e73f18d-0', tool_calls=[{'name': 'search_duckduckgo', 'args': {'query': 'list of G20 countries'}, 'id': 'call_6bv2'}]),\n",
-       "  ToolMessage(content='[{\"url\": \"https://en.wikipedia.org/wiki/G20\", \"content\": \"The G20 or Group of 20 is an intergovernmental forum comprising 19 sovereign countries, the European Union (EU), and the African Union (AU). It works to address major issues related to the global economy, such as international financial stability, climate change mitigation and sustainable development.. The G20 is composed of most of the world\\'s largest economies\\' finance ministries, including ...\"}, {\"url\": \"https://www.worldatlas.com/articles/g20-members.html\", \"content\": \"List of G20 Members ... Which Countries Have Featured As Guests In The G20 Events? The organization engages numerous non-member nations in their events to ensure that they reflect on global opinion. Some of the permanent invitees include Rwanda as the chair of the African Union, Papua New Guinea as the 2018\\'s host, Senegal, Spain and ...\"}, {\"url\": \"https://worldpopulationreview.com/country-rankings/g20-countries\", \"content\": \"The forum was originally formed in 1999. The G20 is made up of a group of nations with the most advanced and emerging economies in the world. These countries make up about 85% of global GDP, over 75% of global trade, and approximately two-thirds of the world\\'s total population. These nations also make up about half of the earth\\'s total land ...\"}, {\"url\": \"https://www.investopedia.com/terms/g/g-20.asp\", \"content\": \"The G-20 is a forum of 19 countries and the European Union that promotes global economic growth, trade, and financial regulation. Learn about its members, policy focus, history, and criticism.\"}, {\"url\": \"https://www.britannica.com/topic/Group-of-20\", \"content\": \"Jeff Wallenfeldt. Group of 20 (G20), international body created in 1999 that provides a forum for strategic economic communication between industrialized and developing countries. The G20 originated as a response to the economic crises of the late 1990s; it expanded on the work of the Group of Seven (G7; known as.\"}]', name='search_duckduckgo', id='d762530f-c767-4421-b1ae-e2ff54d8bba0', tool_call_id='call_6bv2'),\n",
-       "  AIMessage(content='The G20 countries are: Argentina, Australia, Brazil, Canada, China, France, Germany, India, Indonesia, Italy, Japan, Mexico, Russia, Saudi Arabia, South Africa, South Korea, Turkey, the United Kingdom, and the United States.', response_metadata={'token_usage': {'completion_tokens': 52, 'prompt_tokens': 1486, 'total_tokens': 1538, 'completion_time': 0.150110216, 'prompt_time': 0.513277614, 'queue_time': None, 'total_time': 0.66338783}, 'model_name': 'llama3-70b-8192', 'system_fingerprint': 'fp_abd29e8833', 'finish_reason': 'stop', 'logprobs': None}, id='run-6b9c26c0-fad8-4505-ba4e-ba6bd94ab5fd-0')]}"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "agent_executor.invoke({\"messages\": [(\"user\", \"Give me a list of G20 Countries\")]})"
+    "#agent_executor.invoke({\"messages\": [(\"user\", \"Give me a list of G20 Countries\")]})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "b235ea9c-9655-40c3-946e-888b975a4939",
    "metadata": {},
    "outputs": [],
@@ -113,29 +85,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "740e34aa-9744-41b9-8094-20f235745f52",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\safim\\anaconda3\\Lib\\site-packages\\langchain_core\\_api\\beta_decorator.py:87: LangChainBetaWarning: The method `ChatGroq.with_structured_output` is in beta. It is actively being worked on, so the API may change.\n",
-      "  warn_beta(\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Plan(steps=['Find the list of G20 nations', 'Find the electricity consumption per capita for each nation', 'Compile the data into a table'])"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Defining the planning step\n",
     "class Plan(BaseModel):\n",
@@ -160,18 +113,18 @@
     ")\n",
     "planner = planner_prompt | ChatGroq(temperature=0, groq_api_key=groq_api_key, model_name=\"llama3-70b-8192\").with_structured_output(Plan)\n",
     "\n",
-    "planner.invoke(\n",
-    "    {\n",
-    "        \"messages\": [\n",
-    "            (\"user\", \"Compile table of electricity consumption per capita for g20 nations\")\n",
-    "        ]\n",
-    "    }\n",
-    ")"
+    "# planner.invoke(\n",
+    "#     {\n",
+    "#         \"messages\": [\n",
+    "#             (\"user\", \"Compile table of electricity consumption per capita for g20 nations\")\n",
+    "#         ]\n",
+    "#     }\n",
+    "# )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "d1589263-a31f-45a7-950d-b5b2fa1108d3",
    "metadata": {},
    "outputs": [],
@@ -216,7 +169,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
+   "id": "2d951e9d-e6df-4e8c-94c9-b582d1c4fc5c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Defining table_agent \n",
+    "## (This is a custom output structure for the prompt \"Compile table of electricity consumption per capita for g20 nations\")\n",
+    "class Table(BaseModel):\n",
+    "    country: str\n",
+    "    energy_consumption_per_capita : int\n",
+    "    source_url: str\n",
+    "\n",
+    "table_agent_prompt = ChatPromptTemplate.from_template(\n",
+    "    \"\"\"{response}\"\"\"\n",
+    ")\n",
+    "\n",
+    "table_agent_chain = table_agent_prompt | ChatGroq(temperature=0, groq_api_key=groq_api_key, model_name=\"llama3-70b-8192\").with_structured_output(Table)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "6bef36a9-d93c-4c71-bf8d-ffd14c3faec7",
    "metadata": {},
    "outputs": [],
@@ -227,7 +201,7 @@
     "    plan_str = \"\\n\".join(f\"{i+1}. {step}\" for i, step in enumerate(plan))\n",
     "    task = plan[0]\n",
     "    task_formatted = f\"\"\"For the following plan:\n",
-    "{plan_str}\\n\\nYou are tasked with executing step. You only have one tool: search_duckduckgo, use it when needed {1}, {task}.\"\"\"\n",
+    "{plan_str}\\n\\nYou are tasked with executing step.{1}, {task}. \\n\\nYou only have one tool: search_duckduckgo, use it when needed. \\n\\nProvide sources with urls \"\"\"\n",
     "    agent_response = await agent_executor.ainvoke(\n",
     "        {\"messages\": [(\"user\", task_formatted)]}\n",
     "    )\n",
@@ -248,16 +222,20 @@
     "        return {\"plan\": output.action.steps}\n",
     "\n",
     "\n",
-    "def should_end(state: PlanExecute) -> Literal[\"agent\", \"__end__\"]:\n",
+    "def should_end(state: PlanExecute) -> Literal[\"agent\", \"table_agent\"]:\n",
     "    if \"response\" in state and state[\"response\"]:\n",
-    "        return \"__end__\"\n",
+    "        return \"table_agent\"\n",
     "    else:\n",
-    "        return \"agent\""
+    "        return \"agent\"\n",
+    "\n",
+    "async def table_agent(state: PlanExecute):\n",
+    "    table = await table_agent_chain.ainvoke(state)\n",
+    "    return table"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "a89d8b91-2f14-418e-8d43-eba0811bbbe7",
    "metadata": {},
    "outputs": [],
@@ -287,32 +265,29 @@
     "    should_end,\n",
     ")\n",
     "\n",
+    "# Creating table agent node\n",
+    "workflow.add_node(\"table_agent\", table_agent)\n",
+    "\n",
+    "workflow.set_finish_point(\"table_agent\")\n",
+    "\n",
+    "# From replan to table agent\n",
+    "workflow.add_edge(\"replan\", \"table_agent\")\n",
+    "\n",
     "app = workflow.compile()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "64bc576f-a39c-45fc-be90-be7f87dea0a2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'plan': ['Find the list of G20 nations', 'Find the electricity consumption per capita for each nation', 'Compile the data into a table']}\n",
-      "{'past_steps': ('Find the list of G20 nations', 'Now that we have the list of G20 nations and the information on electricity consumption per capita, we can compile the data into a table. Here is the compiled data:\\n\\n| Country | Electricity Consumption per Capita (kWh) |\\n| --- | --- |\\n| Argentina | 2,531 |\\n| Australia | 9,495 |\\n| Brasil | 2,455 |\\n| Canada | 14,764 |\\n| China | 4,454 |\\n| France | 7,374 |\\n| Germany | 7,035 |\\n| India | 818 |\\n| Indonesia | 744 |\\n| Italy | 5,534 |\\n| Japan | 7,374 |\\n| Korea | 10,162 |\\n| Mexico | 2,144 |\\n| Russia | 6,438 |\\n| Saudi Arabia | 9,295 |\\n| South Africa | 4,144 |\\n| T\\\\u00fcrkiye | 2,844 |\\n| UK | 5,538 |\\n| USA | 12,154 |\\n\\nNote: The electricity consumption per capita values are approximate and based on the data from the provided sources.')}\n",
-      "{'response': 'The table of electricity consumption per capita for G20 nations is:\\n\\n| Country | Electricity Consumption per Capita (kWh) |\\n| --- | --- |\\n| Argentina | 2,531 |\\n| Australia | 9,495 |\\n| Brasil | 2,455 |\\n| Canada | 14,764 |\\n| China | 4,454 |\\n| France | 7,374 |\\n| Germany | 7,035 |\\n| India | 818 |\\n| Indonesia | 744 |\\n| Italy | 5,534 |\\n| Japan | 7,374 |\\n| Korea | 10,162 |\\n| Mexico | 2,144 |\\n| Russia | 6,438 |\\n| Saudi Arabia | 9,295 |\\n| South Africa | 4,144 |\\n| T\\\\u00fcrkiye | 2,844 |\\n| UK | 5,538 |\\n| USA | 12,154 |\\n\\nNote: The electricity consumption per capita values are approximate and based on the data from the provided sources.'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "config = {\"recursion_limit\": 50}\n",
     "inputs = {\"input\": \"Compile table of electricity consumption per capita for g20 nations\"}\n",
     "async for event in app.astream(inputs, config=config):\n",
     "    for k, v in event.items():\n",
-    "        if k != \"__end__\":\n",
-    "            print(v)"
+    "        print(v)"
    ]
   },
   {
@@ -325,18 +300,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "fede1e92-2d3b-4567-9a66-352de85450d6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Object `agent_executor.with_structured_output` not found.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
